Upgrade Java version from 17 to 21 and apply OpenRewrite migration recipe