@@ -16,7 +16,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -102,7 +101,7 @@ public class ComplaintService {
         String fileName = UUID.randomUUID().toString() + extension;
         
         // Save file
-        Path filePath = Paths.get(UPLOAD_DIR + fileName);
+        Path filePath = Path.of(UPLOAD_DIR + fileName);
         Files.write(filePath, file.getBytes());
         
         return fileName;
